[package]
name = "rtsp2hls"
version = "0.2.0"
edition = "2021"
authors = ["KizzyCode Software Labs./Keziah Biermann <development@kizzycode.de>"]
keywords = []
categories = []
description = "`rtsp2hls` is a server to fetch an `rtsp://`-stream and serve it as HLS livestream"
license = "BSD-2-Clause OR MIT"
repository = "https://github.com/KizzyCode/Rtsp2Hls-rust"
readme = "README.md"


[[bin]]
name = "rtsp2hls"
path = "src/main.rs"


[badges]
appveyor = { repository = "KizzyCode/Rtsp2Hls-rust" }


[features]
default = []


[dependencies]
ehttpd = { version = "0.11.0", default-features = false, features = ["server"] }

[dev-dependencies]


[profile.release]
overflow-checks = true

[profile.bench]
overflow-checks = true
